--- a/cliente_otro_dominio/styles.css
+++ b/cliente_otro_dominio/styles.css
@@ -28,7 +28,8 @@ table {
     overflow: hidden;
 }
 
-th, td {
+th,
+td {
     border: 1px solid #ddd;
     padding: 0.75rem;
     text-align: center;
@@ -72,5 +73,93 @@ form input[type="submit"] {
 }
 
 form input[type="submit"]:hover {
+    background-color: #45a049;
+}
+
+/* Login Form */
+#login-section {
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+#login-form input {
+    margin: 0.5rem;
+    padding: 0.75rem;
+    border: 2px solid #4CAF50;
+    border-radius: 6px;
+    outline: none;
+    transition: all 0.3s ease-in-out;
+}
+
+#login-form input:focus {
+    border-color: #388e3c;
+    box-shadow: 0 0 5px rgba(72, 187, 120, 0.6);
+}
+
+#login-form button {
+    background-color: #4CAF50;
+    color: #fff;
+    cursor: pointer;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 0.75rem 1.5rem;
+    border: none;
+    border-radius: 6px;
+}
+
+#login-form button:hover {
+    background-color: #45a049;
+}
+
+/* Logout Button */
+#logoutButton {
+    background-color: #f44336;
+    color: #fff;
+    cursor: pointer;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 0.75rem 1.5rem;
+    border: none;
+    border-radius: 6px;
+    margin-top: 1rem;
+}
+
+#logoutButton:hover {
+    background-color: #d32f2f;
+}
+
+
+/* Register form */
+#register-section {
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+#register-form input {
+    margin: 0.5rem;
+    padding: 0.75rem;
+    border: 2px solid #4CAF50;
+    border-radius: 6px;
+    outline: none;
+    transition: all 0.3s ease-in-out;
+}
+
+#register-form input:focus {
+    border-color: #388e3c;
+    box-shadow: 0 0 5px rgba(72, 187, 120, 0.6);
+}
+
+#register-form button {
+    background-color: #4CAF50;
+    color: #fff;
+    cursor: pointer;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 0.75rem 1.5rem;
+    border: none;
+    border-radius: 6px;
+}
+
+#register-form button:hover {
     background-color: #45a049;
 }
